spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,9 @@ background-image: url("../img/background-3\ copy.jpg");
   background: #ffd740;
   width: 0;
 }
+
+
+.divider {
+  height: 100px;
+  background-color: transparent;
+}
